1. Fixed split-brain-resolver config 2. MessageReceiver now accepts parent parameter and will direct the stream into parent actor 3. Created MessageMaster as a singleton receiver for stream

--- a/DataReceiver.Shared/DataReceiver.Shared.csproj
+++ b/DataReceiver.Shared/DataReceiver.Shared.csproj
@@ -9,8 +9,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Actors\" />
     <Folder Include="Messages\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MessagePublisher.Shared\MessagePublisher.Shared.csproj" />
   </ItemGroup>
 
 </Project>
