--- a/DataReceiver/packages.config
+++ b/DataReceiver/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Akka" version="1.4.25" targetFramework="net461" />
   <package id="Akka.Cluster" version="1.4.25" targetFramework="net461" />
+  <package id="Akka.Cluster.Tools" version="1.4.25" targetFramework="net461" />
   <package id="Akka.Coordination" version="1.4.25" targetFramework="net461" />
   <package id="Akka.Remote" version="1.4.25" targetFramework="net461" />
   <package id="Akka.Streams" version="1.4.25" targetFramework="net461" />
