--- a/src/DataReceiver.Shared/DataReceiver.Shared.csproj
+++ b/src/DataReceiver.Shared/DataReceiver.Shared.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Akka" Version="1.4.25" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
