--- a/src/MessagePublisher.Shared/MessagePublisher.Shared.csproj
+++ b/src/MessagePublisher.Shared/MessagePublisher.Shared.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Akka.Streams" Version="1.4.25" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
   </ItemGroup>
 
 </Project>
