--- a/src/DataReceiver.Shared/DataReceiver.Shared.csproj
+++ b/src/DataReceiver.Shared/DataReceiver.Shared.csproj
@@ -5,12 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Akka" Version="1.4.25" />
+    <PackageReference Include="Akka" Version="1.4.26" />
+    <PackageReference Include="Akka.Persistence" Version="1.4.26" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Messages\" />
   </ItemGroup>
 
   <ItemGroup>
