--- a/src/DataReceiver/DataReceiver.csproj
+++ b/src/DataReceiver/DataReceiver.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <PackageReference Include="Akka.Cluster" Version="1.4.26" />
     <PackageReference Include="Akka.Cluster.Tools" Version="1.4.26" />
+    <PackageReference Include="Akka.Persistence" Version="1.4.26" />
     <PackageReference Include="Akka.Streams" Version="1.4.26" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0" />
