1. Added database schema and migration snapshot 2. Added database helpers to update the database 3. PoolSnapshotActor will now recurrently flush the updates to the database 4. Added ConfigurationExtractor to get connection string in appsettings.json 5. The environment is now changed to Development and so it will accept the connection string of the database in appsettings.Development.json

--- a/.gitignore
+++ b/.gitignore
@@ -63,6 +63,9 @@ project.lock.json
 project.fragment.lock.json
 artifacts/
 
+# .Net Core Development json
+appsettings.Development.json
+
 # ASP.NET Scaffolding
 ScaffoldingReadMe.txt
 
