--- a/src/DataReceiver/appsettings.json
+++ b/src/DataReceiver/appsettings.json
@@ -1,5 +1,6 @@
 ﻿{
   "NumberOfQueuesPerTopic": 3,
   "PublisherUrl": "akka.tcp://datareceiver@localhost:4053/",
-  "RouterNames":"investment-queue,oddschange-queue"
+  "RouterNames": "investment-queue,oddschange-queue",
+  "DataReceiverContext": "Database ConnectionString"
 }
