--- a/src/DataReceiver.Shared.Database/DataReceiver.Shared.Database.csproj
+++ b/src/DataReceiver.Shared.Database/DataReceiver.Shared.Database.csproj
@@ -1,18 +1,18 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Akka" Version="1.4.26" />
-    <PackageReference Include="Akka.Persistence" Version="1.4.26" />
     <PackageReference Include="Dapper" Version="2.0.90" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.10" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0" />
+    <PackageReference Include="SQLScriptHelper" Version="1.0.1" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\DataReceiver.Shared.Database\DataReceiver.Shared.Database.csproj" />
     <ProjectReference Include="..\MessagePublisher.Shared\MessagePublisher.Shared.csproj" />
   </ItemGroup>
 
