--- a/src/DataReceiver/DataReceiver.csproj
+++ b/src/DataReceiver/DataReceiver.csproj
@@ -10,16 +10,25 @@
     <PackageReference Include="Akka.Cluster.Tools" Version="1.4.26" />
     <PackageReference Include="Akka.Persistence" Version="1.4.26" />
     <PackageReference Include="Akka.Streams" Version="1.4.26" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.10" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.10">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\DataReceiver.Shared.Database\DataReceiver.Shared.Database.csproj" />
     <ProjectReference Include="..\DataReceiver.Shared\DataReceiver.Shared.csproj" />
     <ProjectReference Include="..\MessagePublisher.Shared\MessagePublisher.Shared.csproj" />
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="appsettings.Development.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
