--- a/src/MessagePublisher.Shared/MessagePublisher.Shared.csproj
+++ b/src/MessagePublisher.Shared/MessagePublisher.Shared.csproj
@@ -7,6 +7,8 @@
   <ItemGroup>
     <PackageReference Include="Akka.Streams" Version="1.4.26" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
   </ItemGroup>
 
 </Project>
